# az-learnings

./: README.md
AI Specific/: README.md
AI Specific/Develop AI Agents in Aure/Day01/: links.md
AI Specific/Develop AI-powered information extraction solutions in Azure/Day01/: links.md
AI Specific/Develop Computer Vision solutions in Azure/Day01/: links.md
AI Specific/Develop GenAI solutions in Azure/Day01/: links.md
AI-102/: README.md
AI-102/Day01/: links.md
AI-102/Day02/: links.md
AI-102/Day03/: links.md
AI-102/Day04/: links.md
AI-102/Day05/: links.md
AI-900/: README.md
AI-900/Day01/: links.md
AI_Specific/Develop GenAI solutions in Azure/Day01/: links.md
AI_Specific/Develop NLP solutions in Aure/Day01/: links.md
AI_Specific/Develop_AI-powered_information_extraction_solutions_in_Azure/Labs/ai-info-extraction/Labfiles/02 content-app/: create-analyzer.py  pyproject.toml  read-card.py
AI_Specific/Develop_AI-powered_information_extraction_solutions_in_Azure/Labs/ai-info-extraction/Labfiles/03 prebuilt-doc-intelligence/Python/: document-analysis.py  pyproject.toml
AI_Specific/Develop_AI-powered_information_extraction_solutions_in_Azure/Labs/ai-info-extraction/Labfiles/04 custom-doc-intelligence/Python/: pyproject.toml  test-model.py
AI_Specific/Develop_AI-powered_information_extraction_solutions_in_Azure/Labs/ai-info-extraction/Labfiles/05 knowledge/python/: pyproject.toml  search-app.py
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/: index.md
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Instructions/: 02-build-ai-agent.md  03-agent-custom-functions.md
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Instructions/Exercises/: 01-build-agent-portal-and-vscode.md  04-integrate-agent-with-foundry-iq.md  05b-work-iq-integration.md  07-agent-framework.md  08-agent-framework-multi-agents.md
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/02-build-ai-agent/Python/: requirements.txt
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/03a-ai-agent-functions/Python/: ticket-ad6583.txt
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/03c-use-agent-tools-with-mcp/Python/: client.py
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/04-agent-framework/python/: .env  agent-framework.py  pyproject.toml
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/05-agent-orchestration/Python/: agents.py
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/07-agent-framework/python/: agent-framework.py
AI_Specific/Develop_AI_Agents_in_Aure/Labs/ai-agents/Labfiles/08-build-workflow-ms-foundry/Python/: .env  workflow.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Instructions/: 03c-use-agent-tools-with-mcp.md  04-semantic-kernel.md  07-build-agent-in-vs-code.md  08-build-workflow-ms-foundry.md
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Instructions/Exercises/: 02-agent-custom-tools.md  03-mcp-integration.md  05a-m365-teams-integration.md  06-build-workflow-ms-foundry.md
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/03b-build-multi-agent-solution/Python/: agent_triage.py  pyproject.toml
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/03c-use-agent-tools-with-mcp/Python/: client.py  pyproject.toml  requirements.txt
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/04-agent-framework/python/: agent-framework.py  pyproject.toml
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/05-agent-orchestration/Python/: .env  agents.py  pyproject.toml
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/05a-m365-teams-integration/Python/: check_prerequisites.py  cleanup_all.py  deploy_helper.py  m365_teams_lab.py  pyproject.toml  setup_search.py  validate_deployment.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/06-build-remote-agents-with-a2a/python/: .env  client.py  pyproject.toml  run_all.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/06-build-remote-agents-with-a2a/python/outline_agent/: agent.py  agent_executor.py  server.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/06-build-remote-agents-with-a2a/python/routing_agent/: agent.py  server.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/06-build-remote-agents-with-a2a/python/title_agent/: agent.py  agent_executor.py  server.py
AI_Specific/Develop_AI_Agents_in_Azure/Labs/ai-agents/Labfiles/07-agent-framework/python/: .env  agent-framework.py  pyproject.toml
AI_Specific/Develop_GenAI_Solutions_in_Azure/Labs/mslearn-ai-studio/: index.md
AI_Specific/Develop_GenAI_Solutions_in_Azure/Labs/mslearn-ai-studio/labfiles/chat-app/python/: .env  chat-app.py  pyproject.toml
AI_Specific/Develop_NLP_Solutions_in_Azure/Labs/mslearn-ai-language/Labfiles/01-analyze-text/Python/text-analysis/: pyproject.toml  text-analysis.py
AZ-104/: README.md
AZ-104/Day01/: links.md
AZ-104/Day02/: links.md
AZ-104/Day03/: links.md
AZ-104/Day04/: links.md
AZ-305/: README.md
AZ-305/Day01/: links.md
AZ-305/Day02/: links.md
AZ-305/Day03/: links.md
AZ-305/Day04/: links.md
AZ-500/: README.md
AZ-500/Day01/: links.md
AZ-500/Day02/: links.md
AZ-500/Day03/: links.md
AZ-500/Day04/: links.md
AZ-500/Module01/: links.md
AZ-500/Module02/: links.md
AZ-500/Module03/: links.md
AZ-500/Module04/: links.md
AZ-900/: README.md
AZ-900/Day01/: links.md
DP-900/: README.md
DP-900/Day01/: links.md
SC-100/: README.md
SC-100/Day01/: links.md
SC-100/Day02/: links.md
SC-100/Day03/: links.md
SC-100/Day04/: links.md
SC-200/: README.md
SC-200/Day01/: links.md
SC-200/Day02/: links.md
SC-200/Day03/: links.md
SC-200/Day04/: links.md
SC-300/: README.md
SC-300/Day01/: links.md
SC-300/Day02/: links.md
SC-300/Day03/: links.md
SC-300/Day04/: links.md
SC-300/Day05/: links.md
SC-401/: README.md
SC-401/Day01/: links.md
SC-401/Day02/: links.md
SC-401/Day03/: links.md
SC-401/Day04/: links.md
SC-900/: README.md
SC-900/Day01/: links.md
(+45 files in other folders)
