[project]
name = "04-agent-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "d.paardenkooper",email = "d.paardenkooper@it-impressive.nl"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agent-framework (==1.0.0b260212)",
    "opentelemetry-semantic-conventions-ai (==0.4.13)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
