[project]
name = "04-agent-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Kuiper (NCSC-NL)",email = "peter.kuiper@ncsc.nl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "agent-framework (==1.0.0b260212)",
    "opentelemetry-semantic-conventions-ai (==0.4.13)",
    "flake8-black (>=0.4.0,<0.5.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
